--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,3 @@
--e git://github.com/django/django.git@40c8ffad7249fd37ca1629f06d3ab6b129d84b21#egg=Django
-pytz==2018.5
+dj-database-url==0.4.1
+gunicorn==19.4.5
+psycopg2==2.7.1
